# kerasprf

./: .gitignore  README.md  pyproject.toml  test_multi_backend.ipynb
kerasprf/: adapter.py
kerasprf/model/: gaussian_2d.py
kerasprf/model/backend/: base_model.py  jax_model.py  tensorflow_model.py  torch_model.py
